[gd_scene load_steps=11 format=3 uid="uid://cj7c4436jj0bg"]

[ext_resource type="Script" path="res://Scripts/transitions.gd" id="2_aew1l"]
[ext_resource type="Script" path="res://Scripts/voip_input.gd" id="2_neq2n"]
[ext_resource type="FontFile" uid="uid://yie8xidac151" path="res://Fonts/TT Octosquares Trial Medium.ttf" id="3_e4rxt"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="3_m4vdp"]
[ext_resource type="PackedScene" uid="uid://b8vaht7egld2p" path="res://Scenes/player_volume_slider.tscn" id="5_omx22"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_j6isb"]

[sub_resource type="ImageTexture" id="ImageTexture_nqixy"]

[sub_resource type="ImageTexture" id="ImageTexture_0dg3u"]

[sub_resource type="ImageTexture" id="ImageTexture_4nsvr"]

[sub_resource type="ImageTexture" id="ImageTexture_74gu0"]

[node name="Main" type="Control" node_paths=PackedStringArray("level_holder")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_aew1l")
level_holder = NodePath("LevelHolder")

[node name="Transitions" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeFromBlack" type="ColorRect" parent="Transitions"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LevelHolder" type="Node3D" parent="."]

[node name="Control" type="Control" parent="LevelHolder"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="LevelHolder/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -19.0
offset_right = 145.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Lobby ID goes here"

[node name="VOIPInput" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_j6isb")
autoplay = true
bus = &"Record"
script = ExtResource("2_neq2n")

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.012
anchor_top = 0.012
anchor_right = 0.988
anchor_bottom = 0.988
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_m4vdp")

[node name="ColorRect" type="ColorRect" parent="Menu"]
z_index = -9
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -8.0
offset_right = 13.6479
offset_bottom = 7.552
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.01, 0.01, 0.01, 0.0705882)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 0
offset_right = 408.0
offset_bottom = 325.0

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e4rxt")
theme_override_font_sizes/font_size = 56
text = "Settings"

[node name="VoiceUI" type="VBoxContainer" parent="Menu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/VBoxContainer/VoiceUI"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e4rxt")
text = "Voice Threshold:"

[node name="VoiceThreshSlider" type="HSlider" parent="Menu/VBoxContainer/VoiceUI"]
z_index = 1
layout_mode = 2
max_value = 1.0
step = 0.0
value = 0.15

[node name="VoiceThreshInputVal" type="HSlider" parent="Menu/VBoxContainer/VoiceUI/VoiceThreshSlider"]
self_modulate = Color(0, 1, 0.266667, 1)
z_index = -1
layout_mode = 2
offset_right = 406.0
offset_bottom = 16.0
mouse_filter = 1
theme_override_icons/grabber = SubResource("ImageTexture_nqixy")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_0dg3u")
theme_override_icons/grabber_disabled = SubResource("ImageTexture_4nsvr")
theme_override_icons/tick = SubResource("ImageTexture_74gu0")
min_value = -0.01
max_value = 1.0
step = 0.0
value = 0.005

[node name="Label2" type="Label" parent="Menu/VBoxContainer/VoiceUI"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e4rxt")
text = "Voice Volume:"

[node name="VoiceVolume" type="HSlider" parent="Menu/VBoxContainer/VoiceUI"]
z_index = 1
layout_mode = 2
max_value = 2.0
step = 0.0
value = 1.0

[node name="Label3" type="Label" parent="Menu/VBoxContainer/VoiceUI"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e4rxt")
text = "Device:"

[node name="Device" type="OptionButton" parent="Menu/VBoxContainer/VoiceUI"]
layout_mode = 2
item_count = 1

[node name="Players" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -380.352
offset_right = -0.352051
offset_bottom = 325.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Menu/Players"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e4rxt")
theme_override_font_sizes/font_size = 31
text = "Player Volumes:"

[node name="PlayerContainer" type="VBoxContainer" parent="Menu/Players"]
layout_mode = 2

[node name="HBoxContainer" parent="Menu/Players/PlayerContainer" instance=ExtResource("5_omx22")]
layout_mode = 2

[connection signal="drag_ended" from="Menu/VBoxContainer/VoiceUI/VoiceThreshSlider" to="Menu" method="_on_voice_threshold_drag_ended"]
[connection signal="value_changed" from="Menu/VBoxContainer/VoiceUI/VoiceVolume" to="Menu" method="_on_voice_volume_value_changed"]
[connection signal="item_selected" from="Menu/VBoxContainer/VoiceUI/Device" to="Menu" method="_on_device_item_selected"]
